# urbansound-classifier

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: .gitignore  UrbanSound8K.dvc
torchaudio_demo/: dataset.py  main.py  train.py
urbansound_classifier/: dataset.py  model.py  train.py
